--- a/Transfer_learning_casts_dogs.ipynb
+++ b/Transfer_learning_casts_dogs.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGEJJQXNkBaN652PAdDkk8",
+      "mount_file_id": "https://github.com/alvaroguarda/cats-dogs/blob/main/Transfer_learning_casts_dogs.ipynb",
+      "authorship_tag": "ABX9TyPmUIyV2G7fBOGmBVLDWnWc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,12 +63,12 @@
       "metadata": {
         "id": "S8G8pTCSTeFu"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "9PCsPJ5qQ_9P",
         "collapsed": true,
@@ -5087,9 +5088,9 @@
       ],
       "source": [
         "# Baixando o dataset cats_vs_dogs a ser utilizado no Transfer Learning\n",
-        "!wget https://download.microsoft.com/download/3/e/1/3e1c3f21-ecdb-4869-8368-6deba77b919f/kagglecatsanddogs_5340.zip\n",
-        "!unzip kagglecatsanddogs_5340.zip\n",
-        "!rm kagglecatsanddogs_5340.zip\n",
+        "#!wget https://download.microsoft.com/download/3/e/1/3e1c3f21-ecdb-4869-8368-6deba77b919f/kagglecatsanddogs_5340.zip\n",
+        "#!unzip kagglecatsanddogs_5340.zip\n",
+        "#!rm kagglecatsanddogs_5340.zip\n",
         "\n",
         "!ls"
       ]
@@ -5113,7 +5114,7 @@
         "id": "ntaPjHfImN-x",
         "outputId": "b9241471-4537-4166-a8ff-2e6b3e6e592f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
