--- a/Transfer_learning_casts_dogs.ipynb
+++ b/Transfer_learning_casts_dogs.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "https://github.com/alvaroguarda/cats-dogs/blob/main/Transfer_learning_casts_dogs.ipynb",
-      "authorship_tag": "ABX9TyMmEISxcWK31rRHbSbFcO3Q",
+      "authorship_tag": "ABX9TyMrG22j/K2K7RUCibmlrw2W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,73 +57,136 @@
         "#from keras.models import Sequential\n",
         "from keras.layers import Dense #, Dropout, Flatten, Activation\n",
         "#from keras.layers import Conv2D, MaxPooling2D\n",
-        "from keras.models import Model"
+        "from keras.models import Model\n",
+        "\n",
+        "import shutil"
       ],
       "metadata": {
         "id": "S8G8pTCSTeFu"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "9PCsPJ5qQ_9P",
         "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3cde9044-1af9-48d3-bffd-d19f3c099ff4"
+        "outputId": "ad0cdd0d-9828-4306-d9ec-9b5bd686b75e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "drive  sample_data\n"
+            "--2025-08-12 18:57:51--  https://download.microsoft.com/download/3/e/1/3e1c3f21-ecdb-4869-8368-6deba77b919f/kagglecatsanddogs_5340.zip\n",
+            "Resolving download.microsoft.com (download.microsoft.com)... 23.197.18.22, 2600:1407:7400:1187::317f, 2600:1407:7400:1184::317f\n",
+            "Connecting to download.microsoft.com (download.microsoft.com)|23.197.18.22|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 824887076 (787M) [application/octet-stream]\n",
+            "Saving to: ‘kagglecatsanddogs.zip’\n",
+            "\n",
+            "kagglecatsanddogs.z 100%[===================>] 786.67M   145MB/s    in 10s     \n",
+            "\n",
+            "2025-08-12 18:58:02 (75.9 MB/s) - ‘kagglecatsanddogs.zip’ saved [824887076/824887076]\n",
+            "\n",
+            " CDLA-Permissive-2.0.pdf   PetImages  'readme[1].txt'   sample_data\n"
           ]
         }
       ],
       "source": [
         "# Baixando o dataset cats_vs_dogs a ser utilizado no Transfer Learning\n",
-        "#!wget https://download.microsoft.com/download/3/e/1/3e1c3f21-ecdb-4869-8368-6deba77b919f/kagglecatsanddogs_5340.zip\n",
-        "#!unzip kagglecatsanddogs_5340.zip\n",
-        "#!rm kagglecatsanddogs_5340.zip\n",
+        "!wget https://download.microsoft.com/download/3/e/1/3e1c3f21-ecdb-4869-8368-6deba77b919f/kagglecatsanddogs_5340.zip \\\n",
+        "  -O kagglecatsanddogs.zip\n",
         "\n",
+        "!unzip -q kagglecatsanddogs.zip\n",
+        "!rm kagglecatsanddogs.zip\n",
         "!ls"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "root = 'drive/MyDrive/PetImages'\n",
+        "root = 'PetImages'\n",
         "\n",
         "categories = [x[0] for x in os.walk(root) if x[0]][1:]\n",
         "#categories = [c for c in categories if c not in [os.path.join(root, e) for e in exclude]]\n",
         "\n",
-        "print(categories)\n",
-        "\n",
-        "#!ls PetImages"
+        "print(categories)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ntaPjHfImN-x",
-        "outputId": "6cf2a1ae-98a7-41c2-cf6a-1ad57edfa961"
+        "outputId": "86f77ca7-c17a-4947-a461-39eb8c8cd95f",
+        "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['drive/MyDrive/PetImages/Cat', 'drive/MyDrive/PetImages/Dog']\n",
-            "ls: cannot access 'PetImages': No such file or directory\n"
+            "['PetImages/Cat', 'PetImages/Dog']\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from posixpath import split\n",
+        "def split_data(source, training, testing, split_size):\n",
+        "    dataset = []\n",
+        "    for subdir, dirs, files in os.walk(source):\n",
+        "        category = os.path.basename(subdir)\n",
+        "        if category == source: # Skip the root directory itself\n",
+        "            continue\n",
+        "        for file in files:\n",
+        "            file_path = os.path.join(subdir, file)\n",
+        "            if os.path.getsize(file_path) > 0: # Check if file is not empty\n",
+        "                dataset.append((file_path, category))\n",
+        "            else:\n",
+        "                print(f\"Warning: Skipping empty file {file_path}\")\n",
+        "\n",
+        "    np.random.shuffle(dataset)\n",
+        "    split_index = int(len(dataset) * split_size)\n",
+        "\n",
+        "    training_files = dataset[:split_index]\n",
+        "    testing_files = dataset[split_index:]\n",
+        "\n",
+        "    # Create training and testing directories if they don't exist\n",
+        "    if not os.path.exists(training):\n",
+        "        os.makedirs(training)\n",
+        "    if not os.path.exists(testing):\n",
+        "        os.makedirs(testing)\n",
+        "\n",
+        "    # Copy files to the respective directories\n",
+        "    for file_path, category in training_files:\n",
+        "        destination_dir = os.path.join(training, category)\n",
+        "        if not os.path.exists(destination_dir):\n",
+        "            os.makedirs(destination_dir)\n",
+        "        shutil.copy(file_path, destination_dir)\n",
+        "\n",
+        "    for file_path, category in testing_files:\n",
+        "        destination_dir = os.path.join(testing, category)\n",
+        "        if not os.path.exists(destination_dir):\n",
+        "            os.makedirs(destination_dir)\n",
+        "        shutil.copy(file_path, destination_dir)\n",
+        "\n",
+        "split_size = 0.9\n",
+        "#split_data(root, 'train', 'test', split_size)"
+      ],
+      "metadata": {
+        "id": "dBsr5yGrlelC"
+      },
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -132,14 +194,15 @@
         "# helper function to load image and return it and input vector\n",
         "def get_image(path):\n",
         "    try:\n",
-        "        img = image.load_img(path, target_size=(224, 224))\n",
-        "        x = image.img_to_array(img)\n",
-        "        x = np.expand_dims(x, axis=0)\n",
-        "        x = preprocess_input(x)\n",
-        "        return img, x\n",
+        "        if os.path.getsize(path) > 0: # Check if file is not empty\n",
+        "          img = image.load_img(path, target_size=(224, 224))\n",
+        "          x = image.img_to_array(img)\n",
+        "          x = np.expand_dims(x, axis=0)\n",
+        "          x = preprocess_input(x)\n",
+        "          return img, x\n",
         "    except Exception as e:\n",
         "        print(f\"Error loading image {path}: {e}\")\n",
-        "        return None, None\n",
+        "    return None, None\n",
         "\n",
         "# load all the images from root folder\n",
         "data = []\n",
@@ -192,7 +255,7 @@
         "id": "dhpADU7gZDJ7",
         "outputId": "da02cc51-30ec-4262-b830-849ee721c51d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +285,7 @@
         },
         "outputId": "b211269a-87ba-4706-9fd7-34d8a2df8b9b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +504,7 @@
         },
         "outputId": "9be44201-3091-4027-b02d-2584fc0bfbc5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -611,7 +674,7 @@
       "source": [
         "history = model_new.fit(x_train, y_train,\n",
         "                        batch_size=128,\n",
-        "                        epochs=10,\n",
+        "                        epochs=15,\n",
         "                        validation_data=(x_val, y_val))"
       ],
       "metadata": {
@@ -621,7 +684,7 @@
         },
         "outputId": "86b71a6f-13e8-425e-8503-4487dcb8d304"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +739,7 @@
         },
         "outputId": "d0303ca2-8ef7-4e13-8916-df389b346e24"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -706,7 +769,7 @@
         },
         "outputId": "7a2d9a50-8d61-4be3-cc00-cf632b570659"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +796,7 @@
         },
         "outputId": "c5ee125e-042b-4cf2-f0d6-08d84be51dcd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
