--- a/Transfer_learning_casts_dogs.ipynb
+++ b/Transfer_learning_casts_dogs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrG22j/K2K7RUCibmlrw2W",
+      "authorship_tag": "ABX9TyPDBjn5U5IHk8br0sslM61r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -785,9 +785,9 @@
       "cell_type": "code",
       "source": [
         "# predict a new image\n",
-        "img, x = get_image('drive/MyDrive/Images2Predict/dog.jpg')\n",
-        "probabilities = model_new.predict(x)\n",
-        "print(probabilities)"
+        "#img, x = get_image('drive/MyDrive/Images2Predict/dog.jpg')\n",
+        "#probabilities = model_new.predict(x)\n",
+        "#print(probabilities)"
       ],
       "metadata": {
         "id": "tIRfRnK6kYFE",
