--- a/Transfer_learning_casts_dogs.ipynb
+++ b/Transfer_learning_casts_dogs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEs1W20WlY/8u3oz7ax+IV",
+      "authorship_tag": "ABX9TyNNkMpIQtDgbpCILDJac+yg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,18 +44,14 @@
         "%matplotlib inline\n",
         "\n",
         "import os\n",
-        "#import random\n",
         "import numpy as np\n",
         "import keras\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
-        "#from matplotlib.pyplot import imshow\n",
         "\n",
         "from keras.preprocessing import image\n",
         "from keras.applications.imagenet_utils import preprocess_input\n",
-        "#from keras.models import Sequential\n",
-        "from keras.layers import Dense #, Dropout, Flatten, Activation\n",
-        "#from keras.layers import Conv2D, MaxPooling2D\n",
+        "from keras.layers import Dense\n",
         "from keras.models import Model\n",
         "\n",
         "import shutil"
@@ -245,7 +241,7 @@
         "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 893
+          "height": 913
         },
         "outputId": "b74ffb6d-a83a-46c8-c6dc-ee3f770663ed"
       },
@@ -709,7 +705,7 @@
         "id": "lL2VTDmVf_ZC",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 398
+          "height": 206
         },
         "outputId": "27b96581-dc43-483b-e338-38d5b57d291b"
       },
